--- a/.travis.yml
+++ b/.travis.yml
@@ -17,3 +17,11 @@ script:
 - git submodule update --init --recursive
 - /opt/qt56/bin/qmake
 - make
+
+deploy:
+  provider: releases
+  api_key: "7c1a1517ffbe9ccd5ae18ddb14cf2c691c1f6c6b"
+  file: "mytest"
+  skip_cleanup: true
+  on:
+    tags: true
