--- a/.travis.yml
+++ b/.travis.yml
@@ -17,6 +17,7 @@ script:
 - make
 
 deploy:
+  language: cpp
   provider: releases
   api_key: "7c1a1517ffbe9ccd5ae18ddb14cf2c691c1f6c6b"
   file: "mytest"
