--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,23 @@ compiler: gcc
 dist: trusty
 sudo: require
 
+env:
+  - QT_BASE=56
+  - QT_BASE=xenial
+  - QT_BASE=bionic
+  - QT_BASE=appimage
+  
+service:
+- docker
+
 before_install:
+- if [ "$QT_BASE" = "56" ]; then sudo add-apt-repository ppa:beineri/opt-qt562-trusty -y; fi
+- if [ "$QT_BASE" = "xenial" ]; then docker pull theshadowx/qt5:xenial; fi
+- if [ "$QT_BASE" = "bionic" ]; then docker pull theshadowx/qt5:bionic; fi
+- if [ "$QT_BASE" = "appimage" ]; then docker pull theshadowx/qt5:xenial; fi
+
+
+
 - sudo add-apt-repository --yes ppa:ubuntu-toolchain-r/test
 - sudo add-apt-repository --yes ppa:beineri/opt-qt562-trusty
 - sudo apt-get update -qq
@@ -12,15 +28,20 @@ install:
 - sudo apt-get install -qq g++-8 qt56-meta-minimal
 - sudo update-alternatives --install /usr/bin/g++ g++ /usr/bin/g++-8 90
 
+before_script:
+- if [ "$QT_BASE" == "56" ]; then /opt/qt56/bin/qmake -v; fi
+- if [ "$QT_BASE" == "xenial" ]; then docker run --rm -it theshadowx/qt5:xenial qmake -v; fi
+- if [ "$QT_BASE" == "bionic" ]; then docker run --rm -it theshadowx/qt5:bionic qmake -v; fi
+
+
 script:
-- /opt/qt56/bin/qmake
+#- /opt/qt56/bin/qmake
 - make
 
 deploy:
-  language: cpp
   provider: releases
   api_key: "7c1a1517ffbe9ccd5ae18ddb14cf2c691c1f6c6b"
   file: "mytest"
   skip_cleanup: true
   on:
-    tags: false
+    tags: true
