--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ dist: trusty
 sudo: require
 
 env:
-  - QT_BASE=56
+  - QT_BASE=510
   - QT_BASE=xenial
   - QT_BASE=bionic
   #- QT_BASE=appimage
@@ -13,27 +13,28 @@ service:
 - docker
 
 before_install:
-- if [ "$QT_BASE" = "56" ]; then sudo add-apt-repository ppa:beineri/opt-qt562-trusty -y; fi
+- if [ "$QT_BASE" = "510" ]; then sudo add-apt-repository ppa:beineri/opt-qt-5.10.1-trusty -y; fi
 - if [ "$QT_BASE" = "xenial" ]; then docker pull theshadowx/qt5:xenial; fi
 - if [ "$QT_BASE" = "bionic" ]; then docker pull theshadowx/qt5:bionic; fi
 #- if [ "$QT_BASE" = "appimage" ]; then docker pull theshadowx/qt5:xenial; fi
 - sudo add-apt-repository --yes ppa:ubuntu-toolchain-r/test
-#- sudo add-apt-repository --yes ppa:beineri/opt-qt562-trusty
+#- sudo add-apt-repository --yes ppa:beineri/opt-qt-5.10.1-trusty
 - sudo apt-get update -qq
 
 
 
 install:
 - sudo apt-get -y install software-properties-common checkinstall xvfb dh-make fakeroot gpgv2 tree
-- sudo apt-get install -qq g++-8 #qt56-meta-minimal
+- sudo apt-get install -qq g++-8 #qt510-meta-minimal
 - sudo update-alternatives --install /usr/bin/g++ g++ /usr/bin/g++-8 90
-- if [ "$QT_BASE" == "56" ]; then sudo apt-get install -qq qt56base; source /opt/qt56/bin/qt56-env.sh; fi
+- if [ "$QT_BASE" == "510" ]; then sudo apt-get install -qq qt510base; source /opt/qt510/bin/qt510-env.sh; fi
+- ls -l /opt
 
 
 
 before_script:
-#- if [ "$QT_BASE" == "56" ]; then /opt/qt56/bin/qmake -v; fi
-- if [ "$QT_BASE" == "56" ]; then qmake -v; fi
+#- if [ "$QT_BASE" == "56" ]; then /opt/qt510/bin/qmake -v; fi
+- if [ "$QT_BASE" == "510" ]; then qmake -v; fi
 - if [ "$QT_BASE" == "xenial" ]; then docker run --rm -it theshadowx/qt5:xenial qmake -v; fi
 - if [ "$QT_BASE" == "bionic" ]; then docker run --rm -it theshadowx/qt5:bionic qmake -v; fi
 
