--- a/.travis.yml
+++ b/.travis.yml
@@ -47,7 +47,7 @@ deploy:
   provider: releases
   edge: true
   cleanup: true
-  api_key: 5f36b3d1d7843530744d4e3e3e3d9f25c019a6e3
+  token: 5f36b3d1d7843530744d4e3e3e3d9f25c019a6e3
 
 #deploy:
   #provider: releases
