--- a/.travis.yml
+++ b/.travis.yml
@@ -16,8 +16,8 @@ branches:
 
 before_install:
 - echo "------------------------------"
-- echo "------ distro $TRAVIS_DIST"
-- echo "------ os $TRAVIS_OS_NAME"
+- echo "---------------------------------------- distro........... $TRAVIS_DIST"
+#- echo "------ os $TRAVIS_OS_NAME"
 #- sudo add-apt-repository --yes ppa:ubuntu-toolchain-r/test && 
 #- sudo add-apt-repository ppa:beineri/opt-qt-5.10.1-trusty -y
 #- sudo apt-get update -qq
