--- a/.travis.yml
+++ b/.travis.yml
@@ -6,8 +6,13 @@ jobs:
     include:
         - os: linux
           dist: trusty
+          _DISTRO_="trusty"
+        - os: linux
+          dist: xenial
+          _DISTRO_="xenial"
         - os: linux
           dist: bionic
+          _DISTRO_="bionic"
 
 branches:
     only:
@@ -16,7 +21,7 @@ branches:
 
 before_install:
 - echo "------------------------------"
-- echo "---------------------------------------- distro........... $TRAVIS_DIST"
+- echo "---------------------------------------- distro........... $_DISTRO_"
 #- echo "------ os $TRAVIS_OS_NAME"
 #- sudo add-apt-repository --yes ppa:ubuntu-toolchain-r/test && 
 #- sudo add-apt-repository ppa:beineri/opt-qt-5.10.1-trusty -y
