--- a/.travis.yml
+++ b/.travis.yml
@@ -21,7 +21,7 @@ branches:
 
 before_install:
 - echo "------------------------------"
-- echo "---------------------------------------- distro........... $_DISTRO_"
+- echo $TRAVIS_DIST
 #- echo "------ os $TRAVIS_OS_NAME"
 #- sudo add-apt-repository --yes ppa:ubuntu-toolchain-r/test && 
 #- sudo add-apt-repository ppa:beineri/opt-qt-5.10.1-trusty -y
