--- a/.travis.yml
+++ b/.travis.yml
@@ -6,10 +6,13 @@ jobs:
     include:
         - os: linux
           dist: trusty
+          env: _DIST=trusty
         - os: linux
           dist: xenial
+          env: _DIST=xenial
         - os: linux
           dist: bionic
+          env: _DIST=bionic
 
 branches:
     only:
@@ -18,7 +21,7 @@ branches:
 
 before_install:
 - echo "------------------------------"
-- echo $TRAVIS_DIST
+- echo "---------- $_DIST -------------"
 #- echo "------ os $TRAVIS_OS_NAME"
 #- sudo add-apt-repository --yes ppa:ubuntu-toolchain-r/test && 
 #- sudo add-apt-repository ppa:beineri/opt-qt-5.10.1-trusty -y
