--- a/.travis.yml
+++ b/.travis.yml
@@ -10,9 +10,9 @@ jobs:
         - os: linux
           dist: xenial
           env: _DIST=xenial
-        - os: linux
-          dist: bionic
-          env: _DIST=bionic
+        #- os: linux
+          #dist: bionic
+          #env: _DIST=bionic
 
 branches:
     only:
@@ -20,12 +20,7 @@ branches:
 
 
 before_install:
-- echo "------------------------------"
-- echo "---------- $_DIST -------------"
-#- echo "------ os $TRAVIS_OS_NAME"
-#- sudo add-apt-repository --yes ppa:ubuntu-toolchain-r/test && 
-#- sudo add-apt-repository ppa:beineri/opt-qt-5.10.1-trusty -y
-#- sudo apt-get update -qq
+- if [[ "${_DIST}" == trusty ]]; then sudo add-apt-repository --yes ppa:ubuntu-toolchain-r/test && sudo add-apt-repository ppa:beineri/opt-qt-5.10.1-trusty -y && sudo apt-get update -qq ; fi
 
 
 
