--- a/.travis.yml
+++ b/.travis.yml
@@ -21,7 +21,8 @@ branches:
 
 before_install:
 - if [[ "${_DIST}" == trusty ]]; then sudo add-apt-repository --yes ppa:ubuntu-toolchain-r/test && sudo add-apt-repository ppa:beineri/opt-qt-5.10.1-trusty -y && sudo apt-get update -qq ; fi
-
+- if [[ "${_DIST}" == trusty ]]; then echo "this is trusty" ; fi
+- if [[ "${_DIST}" == xenial ]]; then echo "this is xenial" ; fi
 
 
 #install:
