--- a/.travis.yml
+++ b/.travis.yml
@@ -27,7 +27,8 @@ before_install:
 
 install:
 - sudo apt-get -y install software-properties-common checkinstall xvfb dh-make fakeroot gpgv2 tree g++-8
-- sudo update-alternatives --install /usr/bin/g++ g++ /usr/bin/g++-8 90
+#- sudo update-alternatives --install /usr/bin/g++ g++ /usr/bin/g++-8 90
+- export CC=gcc-8 && export CXX=g++-8
 - if [[ "${_DIST}" == trusty ]]; then sudo apt-get install -qq qt510base && source /opt/qt510/bin/qt510-env.sh ; fi
 - if [[ "${_DIST}" == xenial ]]; then sudo apt-get install -qq qt5-default qt5-qmake ; fi
 
@@ -37,7 +38,8 @@ before_script:
 - qmake -v
 
 
-#script:
+script:
+- qmake -v
 #- make -j$(nproc)
 
 
