--- a/.travis.yml
+++ b/.travis.yml
@@ -22,9 +22,9 @@ branches:
 before_install:
 - if [[ "${TRAVIS_OS_NAME}" == linux ]]; then sudo add-apt-repository --yes ppa:ubuntu-toolchain-r/test ; fi
 - if [[ "${_DIST}" == trusty ]]; then sudo add-apt-repository ppa:beineri/opt-qt-5.10.1-trusty -y ; fi
-- if [[ "${_DIST}" == xenial ]]; then sudo add-apt-repository ppa:beineri/opt-qt-5.14.1-xenial -y ; fi
-- if [[ "${_DIST}" == bionic ]]; then sudo add-apt-repository ppa:beineri/opt-qt-5.14.1-bionic -y ; fi
-
+#- if [[ "${_DIST}" == xenial ]]; then sudo add-apt-repository ppa:beineri/opt-qt-5.14.1-xenial -y ; fi
+#- if [[ "${_DIST}" == bionic ]]; then sudo add-apt-repository ppa:beineri/opt-qt-5.14.1-bionic -y ; fi
+- if [ "${_DIST}" == xenial ] || [ "${_DIST}" == bionic ] ; then sudo add-apt-repository ppa:beineri/opt-qt-5.14.1-$_DIST -y ; fi
 - if [[ "${TRAVIS_OS_NAME}" == linux ]]; then sudo apt-get update -qq ; fi
 
 
@@ -32,8 +32,9 @@ install:
 - if [[ "${TRAVIS_OS_NAME}" == linux ]]; then sudo apt-get -y install software-properties-common checkinstall xvfb dh-make fakeroot gpgv2 tree g++-8 ; fi
 - if [[ "${TRAVIS_OS_NAME}" == linux ]]; then export CC=gcc-8 && export CXX=g++-8 ; fi
 - if [[ "${_DIST}" == trusty ]]; then sudo apt-get install -qq qt510base && source /opt/qt510/bin/qt510-env.sh ; fi
-- if [[ "${_DIST}" == xenial ]]; then sudo apt-get install -qq qt514base && source /opt/qt514/bin/qt514-env.sh ; fi
-- if [[ "${_DIST}" == bionic ]]; then sudo apt-get install -qq qt514base && source /opt/qt514/bin/qt514-env.sh ; fi
+#- if [[ "${_DIST}" == xenial ]]; then sudo apt-get install -qq qt514base && source /opt/qt514/bin/qt514-env.sh ; fi
+#- if [[ "${_DIST}" == bionic ]]; then sudo apt-get install -qq qt514base && source /opt/qt514/bin/qt514-env.sh ; fi
+- if [ "${_DIST}" == xenial ] || [ "${_DIST}" == bionic ] ; then sudo apt-get install -qq qt514base && source /opt/qt514/bin/qt514-env.sh ; fi
 
 
 
@@ -42,8 +43,7 @@ before_script:
 
 
 script:
-- qmake -v
-#- make -j$(nproc)
+- make -j$(nproc)
 
 
 #deploy:
