--- a/.travis.yml
+++ b/.travis.yml
@@ -49,8 +49,8 @@ after_success:
 - cp mytest appimage/mytest/usr/bin
 - cp -t appimage/mytest/ mytest.desktop mytest.png
 - wget -c https://github.com/probonopd/linuxdeployqt/releases/download/5/linuxdeployqt-5-x86_64.AppImage
-- chmod +x linuxdeployqt-6-x86_64.AppImage
-- ./linuxdeployqt-6-x86_64.AppImage appimage/mytest/usr/bin/mytest -appimage
+- chmod +x linuxdeployqt-5-x86_64.AppImage
+- if [[ "${_DIST}" != bionic ]]; then ./linuxdeployqt-5-x86_64.AppImage appimage/mytest/usr/bin/mytest -appimage ; fi
 - echo $PWD
 - tree .
 
