--- a/.travis.yml
+++ b/.travis.yml
@@ -21,14 +21,15 @@ branches:
 before_install:
 - if [[ "${TRAVIS_OS_NAME}" == linux ]]; then sudo add-apt-repository --yes ppa:ubuntu-toolchain-r/test ; fi
 - if [[ "${_DIST}" == trusty ]]; then sudo add-apt-repository ppa:beineri/opt-qt-5.9.7-trusty -y ; fi
-- if [ "${_DIST}" == xenial ] || [ "${_DIST}" == bionic ] ; then sudo add-apt-repository ppa:beineri/opt-qt-5.12.7-$_DIST -y ; fi
+- if [ "${_DIST}" == xenial ] || [ "${_DIST}" == bionic ] ; then sudo add-apt-repository ppa:beineri/opt-qt-5.9.7-$_DIST -y ; fi
 - if [[ "${TRAVIS_OS_NAME}" == linux ]]; then sudo apt-get update -qq ; fi
 
 
 install:
 - if [[ "${TRAVIS_OS_NAME}" == linux ]]; then sudo apt-get -y install software-properties-common checkinstall xvfb dh-make fakeroot gpgv2 tree g++-8 ; fi
 - if [[ "${TRAVIS_OS_NAME}" == linux ]]; then export CC=gcc-8 && export CXX=g++-8 ; fi
-- if [[ "${_DIST}" == trusty ]]; then sudo apt-get install -qq qt59-meta-minimal  && source /opt/qt59/bin/qt59-env.sh ; fi
+#- if [[ "${_DIST}" == trusty ]]; then sudo apt-get install -qq qt59-meta-minimal && source /opt/qt59/bin/qt59-env.sh ; fi
+#- if [[ "${_DIST}" == trusty ]]; then sudo apt-get install -qq qt59-meta-full  && source /opt/qt59/bin/qt59-env.sh ; fi
 - if [ "${_DIST}" == xenial ] || [ "${_DIST}" == bionic ] ; then sudo apt-get install -qq qt512-meta-minimal && source /opt/qt512/bin/qt512-env.sh ; fi
 
 
