--- a/.travis.yml
+++ b/.travis.yml
@@ -21,7 +21,7 @@ branches:
 before_install:
 - if [[ "${TRAVIS_OS_NAME}" == linux ]]; then sudo add-apt-repository --yes ppa:ubuntu-toolchain-r/test ; fi
 - if [[ "${_DIST}" == trusty ]]; then sudo add-apt-repository ppa:beineri/opt-qt597-trusty -y ; fi
-- if [ "${_DIST}" == xenial ] || [ "${_DIST}" == bionic ] ; then sudo add-apt-repository ppa:beineri/opt-qt-5.9.7-$_DIST -y ; fi
+- if [ "${_DIST}" == xenial ] || [ "${_DIST}" == bionic ] ; then sudo add-apt-repository ppa:beineri/opt-qt-5.12.7-$_DIST -y ; fi
 - if [[ "${TRAVIS_OS_NAME}" == linux ]]; then sudo apt-get update -qq ; fi
 
 
@@ -31,7 +31,7 @@ install:
 #- if [[ "${_DIST}" == trusty ]]; then sudo apt-get install -qq qt59-meta-minimal && source /opt/qt59/bin/qt59-env.sh ; fi
 - if [[ "${_DIST}" == trusty ]]; then sudo apt-get install -qq qt59-meta-full  && source /opt/qt59/bin/qt59-env.sh ; fi
 - if [ "${_DIST}" == xenial ] || [ "${_DIST}" == bionic ] ; then sudo apt-get install -qq qt512-meta-minimal && source /opt/qt512/bin/qt512-env.sh ; fi
-
+- sudo apt-get install libmarkdown2-dev
 
 
 before_script:
