--- a/.travis.yml
+++ b/.travis.yml
@@ -30,7 +30,7 @@ install:
 - if [[ "${TRAVIS_OS_NAME}" == linux ]]; then export CC=gcc-8 && export CXX=g++-8 ; fi
 - if [[ "${_DIST}" == trusty ]]; then sudo apt-get install -qq qt59-meta-minimal && source /opt/qt59/bin/qt59-env.sh ; fi
 - if [ "${_DIST}" == xenial ] || [ "${_DIST}" == bionic ] ; then sudo apt-get install -qq qt512-meta-minimal && source /opt/qt512/bin/qt512-env.sh ; fi
-- sudo apt-get install libmarkdown2-dev libmarkdown2
+- cat /opt/qt5*/bin/qt*-env.sh
 
 
 before_script:
